tests/fixtures/fail/unknown_field.sc
let Pair = struct { left: i32, right: i32 }

let main(): i32 = {
  let pair = Pair { left: 40, right: 2 }
  pair.missing
}
